# conductor-signals

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
app/: config.py  engine.py
app/analytics/: engine.py
app/api/: app.py
app/api/routers/: __init__.py  analytics.py  insights.py
app/collectors/: __init__.py  base.py  hardcover.py  weather.py
app/insights/: generator.py
app/llm/: __init__.py  client.py
app/schemas/: __init__.py  models.py
app/storage/: __init__.py  base.py  duckdb.py  repository.py
backend/: pyproject.toml
backend/app/: config.py  engine.py  logging.py
backend/app/api/: app.py
backend/app/collectors/: __init__.py  base.py  calendar.py  fitbit.py  google_health.py  homeassistant.py  http.py  oauth.py  registry.py  spotify.py
backend/app/insights/: __init__.py  generator.py  prompts.py
backend/app/llm/: client.py
backend/app/schemas/: __init__.py  models.py
backend/app/settings/: __init__.py  store.py  (+1 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_collectors.py  test_llm_client.py  test_repository.py  test_spotify_collector.py  test_weather_collector.py
dashboard/: index.html  package.json
dashboard/src/: index.css
docker/: Dockerfile
docs/: architecture.md  development.md
frontend/: package-lock.json
frontend/src/: App.tsx  index.css  main.tsx
tests/: conftest.py  test_analytics.py  test_calendar_collector.py  test_fitbit_collector.py  test_hardcover_collector.py  test_health.py  test_homeassistant_collector.py  test_insights.py  test_migrations.py
(+26 files in other folders)
